--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,12 @@ RoxygenNote: 7.3.1
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Depends: 
+    data.table,
+    DBI,
+    dplyr,
+    httr,
+    jsonlite,
+    roxygen2,
+    rvest,
+    stringr
