--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: OpenSourceAP.DownloadR
-Title: What the Package Does (One Line, Title Case)
+Title: Open Source Asset Pricing (OpenAP) Data Directly in R
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    c(person("Tom", "Zimmermann", email = "tom.zimmermann@uni-koeln.de", role = c("cre","aut"), comment = c(ORCID = "0000-0002-0368-5303")),
+    person("Justus", "Boeker", email = "jboeker2smail.uni-koeln.de", role = "ctr"))
+Description: Downloads asset returns and firm characteristics replicated from the academic asset pricing literature. The package interfaces directly with the Open Source Asset Pricing (OpenAP) project to provide convenient access to predictor portfolios, firm signals, and documentation.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
@@ -16,7 +15,6 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Depends: 
-VignetteBuilder: knitr
 Imports:
     httr,
     rvest,
