minor comment adjustments

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.0.0.9000
 Authors@R: 
     c(person("Tom", "Zimmermann", email = "tom.zimmermann@uni-koeln.de", role = c("cre","aut"), comment = c(ORCID = "0000-0002-0368-5303")),
     person("Justus", "Boeker", email = "jboeker2smail.uni-koeln.de", role = "ctr"))
-Description: Downloads asset returns and firm characteristics replicated from the academic asset pricing literature. The package interfaces directly with the Open Source Asset Pricing (OpenAP) project to provide convenient access to predictor portfolios, firm signals, and documentation.
+Description: The Package provides convenient access to Open Source Asset Pricing (OpenAP) data directly in R. The package enables userrs to download predictor portfolio returns (over 200 cross-sectional predictors with multiple portfolio construction methods) and firm characteristics (over 200 characteristics replicated from the academic asset pricing literature, plus CRSP-based variables such as Price, Size, and Short-term Reversal).
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
