--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: OpenSourceAP.DownloadR
-Title: Download Open Source Asset Pricing (OpenAP) Data Directly into R
+Title: Download Open Source Asset Pricing (OpenAP) Data Directly
 Version: 0.1.0
 Authors@R: 
     c(person("Tom", "Zimmermann", email = "tom.zimmermann@uni-koeln.de", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-0368-5303")),
